SF Primes/src/objects/Clone_Records_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>General settings for the Clone Anything app. Determines which objects can be cloned.</description>
    <fields>
        <fullName>Clone_Profile_Access_Permission_Field__c</fullName>
        <description>The Name of the Clone Profile Access boolean field which determines Profile access.</description>
        <inlineHelpText>The Name of the Clone Profile Access boolean field which determines Profile access.</inlineHelpText>
        <label>Clone Profile Access Permission Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Conditions__c</fullName>
        <description>This field is could be null or a simple equation like &apos;Status__c = &apos;Active&apos; &apos; or &apos;Dynamically&apos;. If this is &apos;Dynamically&apos; then the value is returned by a method.</description>
        <inlineHelpText>This field is could be null or a simple equation like &apos;Status__c = &apos;Active&apos; &apos; or &apos;Dynamically&apos;. If this is &apos;Dynamically&apos; then the value is returned by a method.</inlineHelpText>
        <label>Destination Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Destination_Display_Fields__c</fullName>
        <description>Fields to be displayed in a table that holds the destination parent sObjects.</description>
        <inlineHelpText>Fields to be displayed in a table that holds the destination parent sObjects.</inlineHelpText>
        <label>Destination Display Fields</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Destination_sObject_API_Name__c</fullName>
        <description>The API Name of the destination object. The destination sObject must be related to an Account (have an Account lookup or master-detail field).</description>
        <inlineHelpText>The API Name of the destination object. The destination sObject must be related to an Account (have an Account lookup or master-detail field).</inlineHelpText>
        <label>Destination sObject API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_sObject_Account_Field__c</fullName>
        <description>The Account field for the destination sObject.</description>
        <inlineHelpText>The Account field for the destination sObject.</inlineHelpText>
        <label>Destination sObject Account Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_sObject_Relationship_Field__c</fullName>
        <description>This field would help to get the DestinationRecord from the SourceRecord with just a getSobject() method. Added when the SEO cases clone requirement needed to get Account Plan resource fields into the picklist field</description>
        <inlineHelpText>This field would help to get the DestinationRecord from the SourceRecord with just a getSobject() method. Added when the SEO cases clone requirement needed to get Account Plan resource fields into the picklist field</inlineHelpText>
        <label>Destination sObject Relationship Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluate_Account_Hierarchy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box field is used to know if a given record clone goes through account hierarchy logic to select destination records that are associated with accounts related to source record account in the hierarchy. Else this will have to have the Destination conditions field filled in.</description>
        <inlineHelpText>This check box field is used to know if a given record clone goes through account hierarchy logic to select destination records that are associated with accounts related to source record account in the hierarchy. Else this will have to have the Destinatio</inlineHelpText>
        <label>Evaluate Account Hierarchy ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Query_Conditional_Expression__c</fullName>
        <description>This expression represents how the query has to be constructed. needs to give space between each character except if it is OR or AND
example: ( 1 OR 2 OR 3 ) - space between &apos;(&apos; and &apos;1&apos;</description>
        <inlineHelpText>This expression represents how the query has to be constructed. needs to give space between each character except if it is OR or AND
example: ( 1 OR 2 OR 3 ) - space between &apos;(&apos; and &apos;1&apos;</inlineHelpText>
        <label>Query Conditional Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Autocomplete_Account_Field__c</fullName>
        <label>Source Autocomplete Account Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Autocomplete_Conditions__c</fullName>
        <label>Source Autocomplete Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source_Autocomplete_Fields__c</fullName>
        <label>Source Autocomplete Fields</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Autocomplete_Search_Fields__c</fullName>
        <label>Source Autocomplete Search Fields</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Display_Fields__c</fullName>
        <description>The fields which will be displayed after a source sObject has been selected.</description>
        <inlineHelpText>The fields which will be displayed after a source sObject has been selected.</inlineHelpText>
        <label>Source Display Fields</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source_Key_Field__c</fullName>
        <description>This is the field on the Source object that matches the Destination object ID.</description>
        <inlineHelpText>This is the field on the Source object that matches the Destination object ID.</inlineHelpText>
        <label>Source Key Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Name_Field__c</fullName>
        <description>The name field for the source object. Usually this is simply &quot;Name&quot;, but for some select sObjects, it can different (like &quot;CaseNumber&quot; for Cases).</description>
        <inlineHelpText>The name field for the source object. Usually this is simply &quot;Name&quot;, but for some select sObjects, it can different (like &quot;CaseNumber&quot; for Cases).</inlineHelpText>
        <label>Source Name Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Relationship_to_Destination__c</fullName>
        <description>This is the field (lookup or master-detail) that determines the relationship between the source and destination. If left blank, the source&apos;s destination record might not be filtered from the results.</description>
        <inlineHelpText>This is the field (lookup or master-detail) that determines the relationship between the source and destination. If left blank, the source&apos;s destination record might not be filtered from the results.</inlineHelpText>
        <label>Source Relationship to Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <label>SubType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unsearchable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether or not the field is searchable in the Clone Anything find sObject section.</description>
        <inlineHelpText>Determines whether or not the field is searchable in the Clone Anything find sObject section.</inlineHelpText>
        <label>Unsearchable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sObject_API_Name__c</fullName>
        <label>sObject API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Clone Records Settings</label>
</CustomObject>